# mpqcli

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Dockerfile.alpine  Dockerfile.glibc  Dockerfile.musl  Dockerfile.ubuntu  Dockerfile.valgrind  LICENSE  Makefile  README.md  book.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml  docs.yml  lint.yml  main.yml  pr.yml  prerelease.yml  push.yml  release.yml  tag.yml  test.yml  valgrind.yml
docs/: SUMMARY.md  advanced.md  building.md  changelog.md  commands.md  commands_list.md  contributing.md  installation.md  introduction.md
docs/commands/: about.md  add.md  create.md  extract.md  info.md  list.md  read.md  remove.md  verify.md  version.md
docs/js/: copy-command.js
scripts/: bump_submodules.sh  fetch_package_downloads.sh  install.ps1  install.sh  run_valgrind_tests.sh  tag_and_release.sh
src/: CMakeLists.txt  commands.cpp  commands.h  gamerules.cpp  gamerules.h  helpers.cpp  helpers.h  info.cpp  info.h  locales.cpp  locales.h  main.cpp  mpq.cpp  mpq.h  mpq_extractor.cpp  mpq_print_patchcmd.cpp  mpqcli.cpp  mpqcli.h.in  patch.cpp  patch.h  patch_exe_to_mpq.cpp  validators.h  verify.cpp  verify.h
test/: conftest.py  requirements.txt  test_about_version.py  test_add.py  test_create.py  test_extract.py  test_info.py  test_list.py  test_read.py  test_remove.py  test_verify.py
test/data/: mpq_without_internal_listfile.mpq
